--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-neis-browser",
-  "version": "0.3.0",
+  "name": "neis-browser",
+  "version": "0.3.1",
   "description": "Web Browser only for NEIS",
   "main": "./out/main/index.js",
   "author": "example.com",
