--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neis-browser",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Web Browser only for NEIS",
   "main": "./out/main/index.js",
   "author": "example.com",
@@ -15,7 +15,9 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux"
+    "build:linux": "npm run build && electron-builder --linux",
+    "release:win": "npm run build && electron-builder --win --publish always",
+    "push": "node scripts/push.js"
   },
   "build": {
     "appId": "com.neisbrowser.app",
