--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neis-browser",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "Web Browser only for NEIS",
   "main": "./out/main/index.js",
   "author": "example.com",
@@ -16,6 +16,7 @@
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
     "build:linux": "npm run build && electron-builder --linux",
+    "git:save": "git add . && git commit -m \"Update\" && git push",
     "release:win": "npm run build && electron-builder --win --publish always",
     "push": "node scripts/push.js"
   },
@@ -33,6 +34,12 @@
       "package.json",
       "build/**/*"
     ],
+    "publish": {
+      "provider": "github",
+      "owner": "dayliver",
+      "repo": "neis-browser-release",
+      "private": false
+    },
     "win": {
       "target": "nsis",
       "icon": "build/icon.ico"
