--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neis-browser",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Web Browser only for NEIS",
   "main": "./out/main/index.js",
   "author": "example.com",
@@ -63,6 +63,8 @@
   },
   "dependencies": {
     "@electron-toolkit/utils": "^4.0.0",
+    "crypto-js": "^4.2.0",
+    "pako": "^2.1.0",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
