--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "neis-browser",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "description": "Web Browser only for NEIS",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": "https://hwaryong.com",
+  "homepage": "https://neisbrowser.hwaryong.com",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
@@ -64,6 +64,8 @@
   "dependencies": {
     "@electron-toolkit/utils": "^4.0.0",
     "crypto-js": "^4.2.0",
+    "electron-log": "^5.4.3",
+    "electron-updater": "^6.6.2",
     "pako": "^2.1.0",
     "vue-router": "^4.6.3"
   },
